--- a/css/large.css
+++ b/css/large.css
@@ -1,7 +1,4 @@
 @media only screen and (min-width: 1400px) {
-  div {
-    display: block;
-  }
   body {
     overflow: hidden;
     background-color: #111;
@@ -11,32 +8,29 @@
   h1 {
     text-transform: uppercase;
   	font-size: 55px;
-    margin-bottom: 5px;
+    margin: 0;
   }
   h2 {
     text-transform: uppercase;
-  	font-size: 45px;
+  	font-size: 35px;
+    margin: 0 0 10px 0;
   }
   h3 {
+    margin: 0;
     text-transform: uppercase;
-  	font-size: 35px;
-    margin-bottom: 10px;
-  }
-  h4 {
-    text-transform: uppercase;
-  	font-size: 25px;
-  }
-  h6 {
-    color: #555;
-    font-size: 20px;
-    font-weight: 400;
-    margin-bottom: 0;
+  	font-size: 15px;
   }
   p {
     font-weight: 600;
-    color: #444;
+    color: #666;
   	font-size: 14px;
-    margin-bottom: 5px;
+    margin: 0 0 5px 0;
+  }
+
+  .col {
+    text-align: center;
+  	max-width: 900px;
+  	padding: 0;
   }
 
   #projects-wrapper {
@@ -58,33 +52,6 @@
     justify-content: center;
     overflow: hidden;
     flex-direction: column;
-  }
-
-  .description {
-  	padding-top: 40px;
-  }
-
-  .btn-info {
-    text-transform: uppercase;
-    margin-top: 10px;
-    font-family: 'Raleway';
-    font-weight: 600;
-    background-color: transparent;
-    border: 1px solid #ccc;
-    color: #ccc;
-    border-radius: 0px;
-    padding: 8px 20px 8px 20px;
-    font-size: 13px;
-    transition: all 0.2s ease-in-out;
-  }
-  .btn-info:hover {
-    cursor: pointer;
-    color: #fff;
-    border-color: #fff;
-    background-color: transparent;
-  }
-  .btn-info:focus {
-    outline: none;
   }
 
   .top-row {
@@ -130,6 +97,7 @@
   }
 
   .img {
+    transform: scale(1);
     position: relative;
     transition: all 0.2s ease-in-out;
     width: 100%;
@@ -149,8 +117,18 @@
     overflow: hidden;
     margin: 0;
   }
-  .img-container:hover {
+  .img-container:hover > .overlay {
+    opacity: 1;
+    transform: scale(1);
     cursor: pointer;
+  }
+  .img-container:hover > .img {
+    transform: scale(1.1);
+    opacity: 0.1;
+  }
+
+  .description {
+    padding-top: 20px;
   }
 
   .overlay {
@@ -180,8 +158,15 @@
   }
 
   .brand {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     width: 120px;
     font-size: 15px;
+  }
+  .brand > a {
+    text-decoration: none;
   }
 
   .navbar-collapse > ul {
@@ -193,30 +178,27 @@
 
   .navbar {
     position: fixed;
+    display: flex;
+    align-items: center;
+    margin: 0;
     max-width: 100%;
-    max-height: 80px;
     height: 70px;
     width: 100vw;
-    z-index: 99;
-  }
-
-  .navbar-inverse {
-    max-width: 100%;
-    padding: 0;
-    background-color: transparent;
-    padding: 20px;
   }
 
   .navbar-nav {
-    max-width: 100%;
-    width: 100vw;
+  	display: flex;
+  	align-items: center;
+  	list-style: none;
+  	margin: 0;
+  	-webkit-box-pack: end !important;
+  	-webkit-justify-content: flex-end !important;
+  	-ms-flex-pack: end !important;
+  	justify-content: flex-end !important;
+  	width: 100%;
   }
 
-  .navbar-nav > .nav-item > .nav-link {
-    padding: 10px;
-  }
-
-  .navbar-nav > .nav-item > .nav-link > button {
+  .navbar-nav > .nav-item > button {
     background: transparent;
     border: none;
     font-family: 'Raleway';
@@ -227,13 +209,12 @@
     margin: 0;
     transition: color 0.2s ease-in-out;
   }
-  .navbar-nav > .nav-item > .nav-link > button:hover {
+  .navbar-nav > .nav-item > button:hover {
     cursor: pointer;
     color: #F22F41;
     outline: none;
   }
-  .navbar-nav > .nav-item > .nav-link > button:focus {
-    color: #F22F41;
+  .navbar-nav > .nav-item > button:focus {
     opacity: 1;
     outline: none;
   }
@@ -269,5 +250,8 @@
   }
   .icon-down-open:hover {
     cursor: pointer;
+  }
+  .icon-down-open {
+  	visibility: visible;
   }
 }
