--- a/css/small.css
+++ b/css/small.css
@@ -1,11 +1,11 @@
-div {
-	display: block;
+* {
+	box-sizing: border-box;
 }
 body {
+	margin: 0;
 	background-color: #111;
 	color: #fff;
 	font-family: 'Raleway';
-	overflow: hidden;
 }
 h1 {
 	text-transform: uppercase;
@@ -18,20 +18,6 @@ h2 {
 h3 {
 	text-transform: uppercase;
 	font-size: 25px;
-}
-h4 {
-	text-transform: uppercase;
-	font-size: 15px;
-}
-h5 {
-	font-size: 14px;
-}
-h6 {
-	text-transform: uppercase;
-	color: #333;
-	font-size: 13px;
-	font-weight: 600;
-	margin-bottom: 0;
 }
 p {
 	font-weight: 600;
@@ -48,12 +34,17 @@ a.logo:focus {
 	outline: none;
 }
 
+.col {
+	max-width: 50%;
+	padding: 0 10px 0 10px;
+}
+
 .primary-color {
-	color: #F22F41;
+	color: #F22F41 !important;
 }
 
 .secondary-color {
-	color: #0bdadd;
+	color: #0bdadd !important;
 }
 
 .top-row {
@@ -80,14 +71,11 @@ a.logo:focus {
 	height: 25vh;
 }
 
-.description {
-	padding-top: 25px;
-}
-
 .img {
 	transition: transform 0.4s ease-in-out;
 	width: 100%;
 	height: 100%;
+	opacity: 0.3;
 }
 
 .img-container {
@@ -111,7 +99,7 @@ a.logo:focus {
 	flex-direction: column;
 	justify-content: center;
 	z-index: 1;
-	opacity: 0;
+	opacity: 1;
 	max-width: 100%;
 	max-height: 100%;
 	position: absolute;
@@ -124,13 +112,31 @@ a.logo:focus {
 }
 .overlay >  p {
 	font-size: 13px;
+	color: #eee;
 }
-
-.navbar-collapse > ul {
-	display: flex;
-	flex-direction: row;
-	max-height: 80px;
-	height: 60px;
+.overlay > button {
+	transition: all 0.2s ease-in-out;
+	text-transform: uppercase;
+	margin-top: 10px;
+	font-family: 'Raleway';
+	font-weight: 600;
+	background-color: transparent;
+	border: 1px solid #ccc;
+	color: #ccc;
+	border-radius: 0px;
+	padding: 5px 10px 5px 10px;
+	font-size: 12px;
+}
+.overlay > button:hover {
+	cursor: pointer;
+	color: #fff;
+	border-color: #fff;
+	outline: none;
+	background-color: transparent;
+}
+.overlay < button:focus {
+	outline: none;
+	background-color: transparent;
 }
 
 .brand {
@@ -139,41 +145,31 @@ a.logo:focus {
 }
 
 .navbar {
-	display: flex;
-	flex-direction: row;
-	position: fixed;
-	max-width: 100%;
-	height: 40px;
-	width: 100vw;
 	z-index: 99;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.navbar-inverse {
+	position: fixed;
 	display: flex;
 	align-items: center;
+	margin: 0;
+	padding: 0 20px 0 20px;
 	max-width: 100%;
-	background-color: transparent;
+	height: 80px;
+	width: 100vw;
 }
 
 .navbar-nav {
-	max-width: 100%;
-	width: 100vw;
-}
-
-.navbar > ul {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
+	list-style: none;
+	margin: 0;
+	-webkit-box-pack: end !important;
+	-webkit-justify-content: flex-end !important;
+	-ms-flex-pack: end !important;
+	justify-content: flex-end !important;
+	width: 100%;
 }
 
-.navbar-nav > .nav-item > .nav-link {
-	padding: 5px;
-}
-
-.navbar-nav > .nav-item > .nav-link > button {
-	padding: 0;
+.navbar-nav > .nav-item > button {
+	margin: 10px;
 	background: transparent;
 	border: none;
 	font-family: 'Raleway';
@@ -183,11 +179,11 @@ a.logo:focus {
 	font-weight: 600;
 	transition: color 0.2s ease-in-out;
 }
-.navbar-nav > .nav-item > .nav-link > button:hover {
+.navbar-nav > .nav-item > button:hover {
 	color: #fff;
 	outline: none;
 }
-.navbar-nav > .nav-item > .nav-link > button:focus {
+.navbar-nav > .nav-item > button:focus {
 	color: #F22F41;
 	opacity: 1;
 	outline: none;
@@ -218,10 +214,5 @@ a.logo:focus {
 	color: #F22F41;
 }
 .icon-down-open {
-	font-size: 50px;
-	color: #333;
-	transition: all 0.1s ease-in-out;
-}
-.icon-down-open:hover {
-	cursor: pointer;
+	visibility: hidden;
 }
