--- a/css/medium.css
+++ b/css/medium.css
@@ -41,6 +41,7 @@
   }
 
   .navbar {
+    background-color: transparent;
     padding: 0 20px 0 20px;
     position: fixed;
     display: flex;
@@ -82,7 +83,7 @@
   	flex-direction: column;
   	justify-content: center;
   	z-index: 1;
-  	opacity: 0;
+  	opacity: 1;
   	max-width: 100%;
   	max-height: 100%;
   	position: absolute;
